--- a/index.html
+++ b/index.html
@@ -6,6 +6,12 @@
     <title>Digital Clock | HTML/CSS/JS</title>
     <link rel="stylesheet" href="style.css" />
   </head>
-  <body></body>
+  <body>
+    <div class="hero">
+      <div class="container">
+        <div class="clock">00:00:00</div>
+      </div>
+    </div>
+  </body>
   <script src="script.js"></script>
 </html>
